# tide-api

./: Cargo.toml  hello.txt
src/: main.rs
src/models/: model.rs  param.rs
src/service/: fileserver.rs  middleware.rs  mod.rs  state.rs  stateless.rs
