[package]
name = "tide-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web 服务框架
tide = { version="0.16.0" }
# async_std 作为推荐使用的异步框架, 
# async-std = { version = "1.12.0", features = ["attributes"] }
# tokio 也是一个不错的选择
tokio = { version = "1.0", features = ['full']}
# 做序列化与反序列化
serde = { version = "1.0", features = ["derive"]}
# 日志追踪记录
femme = "2.2.1"
